Fix topbar icon, fix close icon position on mobile

--- a/client/messenger/sass/components/_launcher.scss
+++ b/client/messenger/sass/components/_launcher.scss
@@ -51,7 +51,7 @@
       display: block;
       height: 40px;
       line-height: 40px;
-      right: 60px;
+      right: 10px;
       top: 15px;
       width: 40px;
       z-index: 1000000000;
